assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Roboto&display=swap');

/* Body structure */

html, body {
    margin: 0;
    padding: 0;
    /* Got help from Stack Overflow to disable the horizontal scroll */
    max-width: 100%;
    overflow-x: hidden;
    /* /Got help from Stack Overflow to disable the horizontal scroll */
}

/* Body font styles */

body {
    font-family: 'Roboto', sans-serif;
}

h1, h2, h3, h4, h5, h6 {
    font-family: 'Major Mono Display', monospace;
}

/* Body colours */

body {
    background-color: #131111;
    color: blanchedalmond;
}

#highlight-letter {
    color: #b288ca;
}

.btn-purple {
    color: blanchedalmond;
    background-color: #b288ca;
    border-color: #b288ca;
    font-size: 1rem;
}

.btn-purple:hover {
    color: #b288ca;
    background-color: blanchedalmond;
    border-color: blanchedalmond;
}

/* Header */

.header-container {
    margin: 20px 30px;
    padding: 0;
    max-width: 100%;
}

.nav-container {
    padding: 0;
    margin: 15px 80px;
    float: right;
}

header div a {
    text-decoration: none;
    color: blanchedalmond;
    float: left;
}

nav a {
    text-decoration: none;
    color: blanchedalmond;
    padding: 0 10px;
}

nav ul {
    list-style: none;
}

li {
    display: inline-block;
}

nav a:hover {
    color: #b288ca;
}

div a h1:hover {
    color: #b288ca;
}

.collapse-navbar {
    display: none;
}

@media screen and (max-width: 1199px) {

    .full-navbar {
        display: none;
    }

    .collapse-navbar {
        display: block;
        float: right;
    }

    .nav-container-collapse {
        float: right;
        margin-top: 50px;
        text-align: center;
    }

    .navbar-dark .navbar-toggler {
        color: #b288ca;
    }
    
    .navbar-dark {
        float: right;
        padding: 0;
        margin: 3px 40px;
    }
}

/* Hero section */

#company-logo {
    font-size: 8rem;
}

.book-btn {
    margin: 10px;
}

.callout-container {
    display: none;
}

.full-callout-container {
    position: relative;
    background-color: rgba(0, 0, 0, 0.7);
    padding-top: 4rem;
    padding-bottom: 4rem;  
    margin: 6rem 0;
    z-index: 2;
}

.hero-bg {
    background: url(../images/hero-image.jpg) no-repeat bottom right fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    height: 75vh;
    text-align: center;
    width: 100%;
    z-index: 1;
}

mark {
    font-size: 85%;
    background-color: burlywood;
}

@media screen and (max-width: 1025px) {

    .hero-bg {
        display: none;
    }

    .callout-container {
        display: block;
        text-align: center;
        margin: 20px 0;
    }

    #company-logo {
        font-size: 5rem;
    }

}

/* Modal section */

.modal-body {
    color: blanchedalmond;
    background-color: #131111;
}

.modal-header {
    background-color: #131111;
    border-color: blanchedalmond;
}

.modal-title {
    color: blanchedalmond;
    text-align: center;
}

/* Review section */

.cust-reviews {
    margin: 35px 20px;
    text-align: center;
}

.carousel-inner p {
    width: 1rem;
}

.fa-hand-scissors {
    color: #b288ca;
}

/* Footer section */

footer {
    position: relative;
    margin-top: 100px;
    clear: both;
}

footer h3 {
    margin-bottom: 20px;
}

.contact-footer {
    text-align: center;
}

.contact-footer a {
    text-decoration: none;
    color: #b288ca;
}

.opening {
    text-align: center;
}

.socials {
    text-align: center;
}

.socials i {
    color: #b288ca;
    font-size: 30px;
    padding: 0 15px 129px 15px;
}

.disclaimer {
    text-align: center;
}

.disclaimer i {
    color: #b288ca;
}

.med-footer {
    display: none;
}

.small-footer {
    display: none;
}

@media screen and (max-width: 992px) {

    .full-footer {
        display: none;
    }

    .small-footer {
        display: none;
    }

    .med-footer {
        display: block;
    }

    .socials i {
        padding: 10px;
    }

    .socials, .disclaimer {
        margin-top: 50px;
    }

}

@media screen and (max-width: 768px) {

    .full-footer {
        display: none;
    }

    .med-footer {
        display: none;
    }

    .small-footer {
        display: block;
    }

    .socials i {
        padding: 10px;
    }

    .opening, .socials, .disclaimer {
        margin-top: 50px;
    }

}

/* About section */

.entire-about-full {
    width: 80%;
    display: block;
}

.about-heading-full {
    text-align: left;
    margin-bottom: 50px;
}

.about-content-full {
    margin-top: 110px;
    margin-right: 10%;
    width: 60%;
}

.about-images-full {
   width: 22em;
   height: 32em;
}

.entire-about-med-big, .entire-about-big, .entire-about-med, .entire-about-small {
    display: none;
}

@media screen and (max-width: 1465px) {

    .entire-about-big {
        width: 75%;
        display: block;
    }

    .about-heading-big {
        text-align: left;
        margin-bottom: 50px;
    }

    .about-content-big {
        margin-top: 70px;
        margin-right: 7%;
        width: 50%;
    }

    .about-images-big {
        width: 20em;
        height: 35em;
        margin-top: 5%;
    }

    .entire-about-full, .entire-about-med-big, .entire-about-med, .entire-about-small {
        display: none;
    }

}

@media screen and (max-width: 991px) {

    .entire-about-med-big {
        width: 85%;
        display: block;
    }

    .about-heading-med-big {
        text-align: center;
        margin-bottom: 70px;
    }

    /* Copied code from Geeksforgeeks.org on how to wrap text around images using CSS */
    .about-content-med-big {
        width: 100%;
        text-align: justify;
    }

    .about-images-med-big {
        float: right;
        margin: 2%;
        width: 32%;
    }
    /* /Copied code from Geeksforgeeks.org on how to wrap text around images using CSS */

    .entire-about-full, .entire-about-big, .entire-about-med, .entire-about-small {
        display: none;
    }

}

@media screen and (max-width: 786px) {

    .entire-about-med {
        width: 85%;
        display: block;
    }

    .about-heading-med {
        text-align: center;
        margin-bottom: 50px;
    }

    .about-content-med {
        margin-top: 5%;
        margin-right: 5%;
        width: 100%;
        text-align: center;
    }

    /* Used code from W3 Schools to center an image with CSS */
    .about-images-med {
        margin-left: auto;
        margin-right: auto;
        width: 90%;
        margin-top: 5%;
    }
    /* /Used code from W3 Schools to center an image with CSS */

    .entire-about-full, .entire-about-med-big, .entire-about-big, .entire-about-small {
        display: none;
    }

}

@media screen and (max-width: 576px) {

    .entire-about-small {
        width: 90%;
        display: block;
    }

    .about-heading-small {
        text-align: center;
        margin-bottom: 50px;
    }

    .about-content-small {
        width: 95%;
        margin-bottom: 5%;
        text-align: center;
    }

    /* Used code from W3 Schools to center an image with CSS */
    .about-images-small {
        margin-left: auto;
        margin-right: auto;
        width: 90%;
    }
    /* /Used code from W3 Schools to center an image with CSS */

    .entire-about-full, .entire-about-med-big, .entire-about-big, .entire-about-med {
        display: none;
    }

}

/* Services section */

.entire-services-full {
    display: block;
}

.services-heading {
    text-align: left;
}

.entire-services {
    width: 80%;
}

.tilda-section, .mathias-section {
    width: 60%;
    margin-top: 5%;
}

.tilda-video, .mathias-video {
    margin-top: 12%;
}

video {
    width: 100%;
    height: 75%;
}

.entire-services-small {
    display: none;
}

@media screen and (max-width: 1400px) {
    
    .entire-services-full {
        display: block;
    }

    .tilda-video, .mathias-video {
        margin-top: 13%;
    }

    video {
        width: 100%;
        height: 100%;
    }

    .entire-services-small {
        display: none;
    }
}

@media screen and (max-width: 992px) {

    .entire-services-small {
        display: block;
    }

    .services-heading {
        text-align: center;
    }

    .entire-services {
        width: 100%;
    }

    .tilda-section, .mathias-section {
        text-align: center;
        width: 100%;
        margin-top: 15%;
    }

    .tilda-video, .mathias-video {
        width: 100%;
        text-align: center;
    }

    video {
        width: 50%;
        height: 50%;
    }

    .entire-services-full {
        display: none;
    }

}

@media screen and (max-width: 576px) {

    .entire-services-small {
        display: block;
    }

    .services-heading {
        text-align: center;
    }

    .entire-services {
        width: 100%;
    }

    .tilda-section, .mathias-section {
        text-align: center;
        width: 100%;
        margin-top: 15%;
    }

    .tilda-video, .mathias-video {
        width: 100%;
        text-align: center;
    }

    table {
        font-size: 84%;
    }

    thead h6 {
        font-size: 90%;
    }

    video {
        width: 75%;
        height: 75%;
    }

    .entire-services-full {
        display: none;
    }

}

@media screen and (max-width: 320px) {

    .entire-services-small {
        display: block;
    }

    table {
        font-size: 70%;
    }

    thead h6 {
        font-size: 85%;
    }

    .entire-services-full {
        display: none;
    }

}

@media screen and (max-width: 280px) {

    .entire-services-small {
        display: block;
    }

    table {
        font-size: 62%;
    }

    thead h6 {
        font-size: 80%;
    }

    .entire-services-full {
        display: none;
    }

}

/* Contact section */

.contact-heading {
    text-align: center;
    margin-bottom: 50px;
}

.contact a {
    text-decoration: none;
    color: #b288ca;
}

.contact-1 {
    padding-left: 160px;
}

iframe {
    margin: 0;
    padding: 0;
}

.contact-2a {
    margin-right: 160px;
}

.contact-2b {
    width: 400px;
    margin-right: 160px;
}

.questions-form .row {
    width: 500px;
    margin-bottom: 10px;
}

/* Booking section */

.booking-heading {
    text-align: center;
    margin-bottom: 50px;
}

.booking-content .row {
    margin-top: 10px;
    padding: 0 90px;
}

textarea {
    max-width: 100%;
    resize: none;
    margin-bottom: 15px;
    border-color: #b288ca;
    border-width: 3px;
    background-color: #131111;
    color: blanchedalmond;
}

.form-control {
    border-color: #b288ca;
    border-width: 3px;
    background-color: #131111;
    color: blanchedalmond;
}

input[type="submit"] {
    display: block;
    margin: 0 auto;
    margin-top: 3px;
}   

@media screen and (max-width: 768px) {

   .booking-content {
       width: 100%;
   }

   .booking-content .row {
    margin-top: 10px;
    padding: 0;
}
    
    input[type="date"] {
        padding: 4%;
    }   

}

@media screen and (max-width: 320px) {

   .booking-content {
       width: 100%;
   }

   .booking-content .row {
        margin-top: 10px;
        padding: 0;
    }
    
    .booking-content .col {
        font-size: 77%;
    }

    input[type="date"] {
       width: 85%;
    }   

    select {
        width: 85%;
    }

}

